--- a/project.conf
+++ b/project.conf
@@ -1,12 +1,14 @@
-
-[Details]
+[details]
 name=shell
 version=0.1
 release=alpha
 description=Shell for releax os
 author=Manjeet Singh <itsmanjeet@releax.in>
-lang=cc
 
-[Build]
-compiler=gcc
-require=releax
+[build]
+lang=cc
+ldflags=-lrbase
+
+[test]
+debugger=strace
+command=build/shell
